# mindvault

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  spike_results.txt
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml  run.py
backend/app/: config.py  database.py  main.py  seed.py
backend/app/api/v1/: export.py  ingest.py  links.py  router.py  search.py  tags.py
backend/app/core/: exceptions.py  logging.py
backend/app/llm/: client.py
backend/app/models/: link.py  link_tag.py  tag.py
backend/app/schemas/: __init__.py
backend/app/services/: processor.py  task_runner.py
backend/app/services/crawler/: base.py  bilibili.py  zhihu.py
backend/scripts/: zhihu_login.py
backend/tests/: test_api.py
browser-plugin/: README.md  background.js  content.js  manifest.json  options.html  options.js  popup.html  popup.js
docs/: API接口设计.md  architecture.md  v1总结与v2规划.md  产品定位与策略.md  开发计划与测试.md  开发记录.md  技术可行性评估.md  数据模型设计.md  核心流程设计.md  浏览器插件设计.md  用户体验优化建议.md  系统架构.md
frontend/: Dockerfile  package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/ingest/: page.tsx
frontend/src/app/links/[id]/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/app/tags/: page.tsx
frontend/src/app/tags/[id]/: page.tsx
frontend/src/components/: link-card.tsx  nav-bar.tsx  pagination.tsx  tag-badge.tsx
frontend/src/lib/: api.ts
spike/: all_platforms.py  bilibili_demo.py  bilibili_demo2.py  bilibili_discover.py  bilibili_test.py  bypass_test.py  douyin_demo.py  douyin_demo_v2.py  sequential_test.py  zhihu_demo.py  zhihu_demo2.py  zhihu_test.py
